fix: overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,10 @@
 body {
   overflow: hidden;
 }
+
+@media (max-width: 768px) {
+  body {
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+}
